[metadata]
name = ipam
version = 0.0.1
summary = sumary goes here
author = Flavio Fernandes
home-page = https://flaviof.com
classifier =
    Environment :: ipam
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ipam

[wheel]
universal = 1

